Fixed header spacing for mobile

--- a/css/main.css
+++ b/css/main.css
@@ -110,6 +110,13 @@ img {
 
 /*Welcome page*/
 
+#welcomeheader {
+  display: flex;
+  flex-direction:column;
+  justify-content: center;
+  align-items: center;
+}
+
 #welcomedescription {
   width: 100%;
 
@@ -133,11 +140,7 @@ img {
   
   background-color: white;
 
-  height: 60%;
   width: 100%;
-  max-width: 800px;
-  padding-left: 10%;
-  padding-right: 10%;
 }
 
 #longdrip {
@@ -181,14 +184,6 @@ img {
   object-fit: cover;
 }
 
-#welcomeheader {
-    height: 85vh;
-    display: flex;
-    flex-direction:column;
-    justify-content: center;
-    align-items: center;
-}
-
 /** SCROLL DOWN BUTTON**/
 
 .tear {
@@ -196,13 +191,12 @@ img {
   height: 100px;
   border-radius: 0% 50% 50% 50%;
   transform: rotate(45deg);
-  margin-top: 20px;
   transition: all 0.3s;
   transition-timing-function: ease-in-out;
 
   background-color: #EEEEEE;
 
-  margin: 50px;
+  margin: 80px;
 }
 
 .tear:hover {
@@ -218,7 +212,7 @@ img {
 
 .downarrow {
   display: inline-block;
-  padding: 5% 95% 25% 25%;
+  padding: 5% 90% 25% 25%;
   margin: 12px;
   width: 15px;
   height: 15px;
@@ -240,7 +234,7 @@ img {
     border: solid #EEEEEE;
 
     border-width: 5px 0 0 0;
-}
+  }
 
 .toplinks a.active {
   color: black;
@@ -331,6 +325,16 @@ img {
 .brandbutton {
   display: flex;
 }
+@media screen and (max-width: 800px) {
+  h1 {
+    font-size: 2em;
+    font-weight: 500;
+  }
+
+  h2 {
+    font-size: 1em;
+  }
+}
 
 @media screen and (max-width: 800px) {
   .toplinks a {
@@ -389,7 +393,7 @@ img {
     justify-content: center;
     width: 100%;
     padding-top: 65px;
-    margin-bottom: 30px;
+    margin: 0px 30px 65px 30px;
 }
 
 .casestudy {
